# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: app.py  db.py  formatting.py  utils.py  web.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
